:see_no_evil: Adjust .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-semantic/* linguist-vendored
+semantic/** linguist-vendored
 
-src/static/semantic/* linguist-generated=true
+src/static/semantic/** linguist-generated=true
 package-lock.json linguist-generated=true
