--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "bettersheet",
   "version": "0.1.0",
+  "description": "Create a data website from Google Sheets without writing code",
   "private": true,
+  "author": "WooLNinesun",
   "homepage": "https://bettersheet.csie.org",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WooLNinesun/BetterSheet.git"
+  },
+  "bugs": {
+    "url": "https://github.com/WooLNinesun/BetterSheet/issues"
+  },
+  "license": "MIT",
   "dependencies": {
     "@types/jest": "24.0.16",
     "@types/node": "12.6.8",
